<resources>
    <string name="app_name">Basic Calculator</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">x</string>
    <string name="divide">/</string>
    <string name="submit">Submit</string>
    <string name="con">pic</string>
    <string name="enter">Enter</string>
    <string name="Enter">hint</string>
    <string name="button">Button</string>
    <string name="use_answer">Use Answer</string>
    <string name="clear">CLEAR</string>
    <string name="Entervalue">Enter a Value</string>
    <string name="title_activity_navigation_demo">NavigationDemo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title"><i>Aniket Kundu</i></string>
    <string name="nav_header_subtitle">kunduaniket7@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="Main">Scientific Calculator</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="base_converter">Base Converter</string>
    <string name="base_calculator">Base Calculator</string>
    <string name="unit_converter">Unit Converter</string>
    <string name="scientic_calcultor">Scientific Calculator</string>
    <string name="initial_base"><i>Initial base</i></string>
    <string name="final_base"><i>Final base</i></string>
    <string name="enter_an_expression"><i>Enter an Expression</i></string>
    <string name="dd_mm_yyyy">dd/mm/yyyy</string>
    <string name="age_calculator"><i>Age Calculator</i></string>
    <string name="date_calculator"><i>Date Calculator</i></string>
    <string name="after"><i>After</i></string>
    <string name="before"><i>Before</i></string>
    <string name="date_and_age_calculator">Date and Age Calculator</string>
    <string name="investment_planning">Investment Planning</string>
    <string name="want_to_find"><i><b>Want to find :</b></i></string>
    <string name="unit_conveter">Unit Conveter</string>
    <string name="hide">Hide </string>
    <string name="show">Show </string>
    <string name="Tip1"><i>➣ Use Brackets () for all Functions.</i></string>
    <string name="Tip2"><i>➣ Only required Keys are accessible from the Keyboard.</i></string>
    <string name="Tip3"><i>➣ Type expression in a Proper format to avoid errors.</i></string>
    <string name="about">About</string>
    <string name="bullet">➤</string>
    <string name="share">Share</string>
</resources>