<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/whitepop"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@color/top">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="𝓣𝓲𝓹 :"
            android:textSize="25sp"
            android:textColor="@color/blackinvest"

            android:layout_marginLeft="10dp"></TextView>
        <TextView
            android:id="@+id/Cancelpopup"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:text="X"
            android:textColor="@color/white"
            android:background="@color/Red"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            >

        </TextView>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/linearpanel"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blackinvest"
            android:text="@string/Tip1"></TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blackinvest"
            android:text="@string/Tip2"></TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blackinvest"
            android:text="@string/Tip3"></TextView>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>