<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/BaseView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BaseConverter"
    android:background="@color/teal_900">


        <include
            layout="@layout/toolbar_base_convertor"
            android:id="@+id/toolbar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>
    <EditText
        android:id="@+id/Number_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
></EditText>
    <Button
        android:id="@+id/Submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/Green"
        android:text="@string/submit"
       app:layout_constraintRight_toRightOf="@id/Number_value"
        app:layout_constraintTop_toBottomOf="@id/Number_value"/>
    <Button
        android:id="@+id/clearB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/Red"
        android:text="@string/clear"
       app:layout_constraintRight_toRightOf="@id/Submit"
        app:layout_constraintTop_toBottomOf="@id/Submit"
        android:layout_marginTop="10dp"/>
    <EditText
        android:id="@+id/initial_base"
        android:layout_width="95dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/initial_base"
        android:textSize="18dp"
        android:textColor="@color/white"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="130dp"/>


    <TextView
        android:id="@+id/to"
        android:layout_width="30dp"
        android:layout_height="50dp"
        android:text="to"
        android:textSize="30dp"
      app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="@id/initial_base"
        app:layout_constraintLeft_toRightOf="@id/initial_base"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"/>
    <EditText
        android:id="@+id/final_base"
        android:layout_width="95dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/final_base"
        android:inputType="number"
        android:textColor="@color/white"
        android:textSize="18dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
       app:layout_constraintLeft_toRightOf="@id/to"
        app:layout_constraintBottom_toBottomOf="@id/initial_base"
        android:layout_marginLeft="5dp"

        />

    <TextView
        android:id="@+id/ans_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:textSize="16sp"
        android:layout_marginRight="20dp"
        app:layout_constraintRight_toLeftOf="@id/Submit"
       app:layout_constraintLeft_toLeftOf="@id/Number_value"
        app:layout_constraintTop_toBottomOf="@+id/Number_value" />
    <Button
        android:id="@+id/dot"
        android:layout_width="52dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/ggg"
        android:textColor="@color/teal_900"
        android:text="."
        android:textSize="20sp"
       app:layout_constraintRight_toRightOf="@id/clearB"
        app:layout_constraintTop_toBottomOf="@id/clearB"
        app:layout_constraintLeft_toLeftOf="@id/clearB"
        android:layout_marginTop="5dp"/>
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        app:layout_constraintTop_toBottomOf="@id/ans_view"
        app:layout_constraintRight_toRightOf="@id/ans_view"
        app:layout_constraintLeft_toLeftOf="@id/ans_view"
        android:layout_marginTop="10dp"
        >

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="142dp"
            tools:layout_editor_absoluteY="385dp"


            >
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/_1"
                    android:backgroundTint="@color/gg"
                    android:textColor="@color/teal_700"
                    android:layout_width="52dp"
                    android:layout_height="50dp"
                    android:text="1" />

                <Button
                    android:id="@+id/_2"
                    android:backgroundTint="@color/gg"
                    android:textColor="@color/teal_700"
                    android:layout_width="52dp"
                    android:layout_height="50dp"
                    android:text="2" />

                <Button
                    android:id="@+id/_3"
                    android:layout_width="52dp"
                    android:backgroundTint="@color/gg"
                    android:textColor="@color/teal_700"
                    android:layout_height="50dp"
                    android:text="3" />

                <Button
                    android:id="@+id/a"
                    android:backgroundTint="@color/ggg"
                    android:textColor="@color/teal_900"
                    android:layout_width="52dp"
                    android:layout_height="50dp"
                    android:text="A" />

                <Button
                    android:id="@+id/b"
                    android:backgroundTint="@color/ggg"
                    android:textColor="@color/teal_900"
                    android:layout_width="52dp"
                    android:layout_height="50dp"
                    android:text="B" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/_4"
                    android:layout_width="52dp"
                    android:backgroundTint="@color/gg"
                    android:textColor="@color/teal_700"
                    android:layout_height="50dp"
                    android:text="4" />

                <Button
                    android:id="@+id/_5"
                    android:backgroundTint="@color/gg"
                    android:textColor="@color/teal_700"
                    android:layout_width="52dp"
                    android:layout_height="50dp"
                    android:text="5" />

                <Button
                    android:id="@+id/_6"
                    android:backgroundTint="@color/gg"
                    android:textColor="@color/teal_700"
                    android:layout_width="52dp"
                    android:layout_height="50dp"
                    android:text="6" />

                <Button
                    android:id="@+id/c"
                    android:backgroundTint="@color/ggg"
                    android:textColor="@color/teal_900"
                    android:layout_width="52dp"
                    android:layout_height="50dp"
                    android:text="C" />

                <Button
                    android:id="@+id/d"
                    android:backgroundTint="@color/ggg"
                    android:textColor="@color/teal_900"
                    android:layout_width="52dp"
                    android:layout_height="50dp"
                    android:text="D" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/_7"
                    android:backgroundTint="@color/gg"
                    android:textColor="@color/teal_700"
                    android:layout_width="52dp"
                    android:layout_height="50dp"
                    android:text="7" />

                <Button
                    android:id="@+id/_8"
                    android:backgroundTint="@color/gg"
                    android:textColor="@color/teal_700"
                    android:layout_width="52dp"
                    android:layout_height="50dp"
                    android:text="8" />

                <Button
                    android:id="@+id/_9"
                    android:backgroundTint="@color/gg"
                    android:textColor="@color/teal_700"
                    android:layout_width="52dp"
                    android:layout_height="50dp"
                    android:text="9" />

                <Button
                    android:id="@+id/_0"
                    android:backgroundTint="@color/gg"
                    android:textColor="@color/teal_700"
                    android:layout_width="52dp"
                    android:layout_height="50dp"
                    android:text="0" />

                <Button
                    android:id="@+id/e"
                    android:backgroundTint="@color/ggg"
                    android:textColor="@color/teal_900"
                    android:layout_width="52dp"
                    android:layout_height="50dp"
                    android:text="E" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/f"
                    android:backgroundTint="@color/ggg"
                    android:textColor="@color/teal_900"
                    android:layout_width="52dp"
                    android:layout_height="50dp"
                    android:text="F" />

                <Button
                    android:id="@+id/g"
                    android:backgroundTint="@color/ggg"
                    android:textColor="@color/teal_900"
                    android:layout_width="52dp"
                    android:layout_height="50dp"
                    android:text="G" />

                <Button
                    android:id="@+id/h"
                    android:backgroundTint="@color/ggg"
                    android:textColor="@color/teal_900"
                    android:layout_width="52dp"
                    android:layout_height="50dp"
                    android:text="H" />

                <Button
                    android:id="@+id/i"
                    android:backgroundTint="@color/ggg"
                    android:textColor="@color/teal_900"
                    android:layout_width="52dp"
                    android:layout_height="50dp"
                    android:text="I" />

                <Button
                    android:id="@+id/j"
                    android:backgroundTint="@color/ggg"
                    android:textColor="@color/teal_900"
                    android:layout_width="52dp"
                    android:layout_height="50dp"
                    android:text="J" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/k"
                    android:backgroundTint="@color/ggg"
                    android:textColor="@color/teal_900"
                    android:layout_width="52dp"
                    android:layout_height="50dp"
                    android:text="K" />

                <Button
                    android:id="@+id/l"
                    android:backgroundTint="@color/ggg"
                    android:textColor="@color/teal_900"
                    android:layout_width="52dp"
                    android:layout_height="50dp"
                    android:text="L" />

                <Button
                    android:id="@+id/m"
                    android:backgroundTint="@color/ggg"
                    android:textColor="@color/teal_900"
                    android:layout_width="52dp"
                    android:layout_height="50dp"
                    android:text="M" />

                <Button
                    android:id="@+id/n"
                    android:backgroundTint="@color/ggg"
                    android:textColor="@color/teal_900"
                    android:layout_width="52dp"
                    android:layout_height="50dp"
                    android:text="N" />

                <Button
                    android:id="@+id/o"
                    android:backgroundTint="@color/ggg"
                    android:textColor="@color/teal_900"
                    android:layout_width="52dp"
                    android:layout_height="50dp"
                    android:text="O" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/p"
                    android:backgroundTint="@color/ggg"
                    android:textColor="@color/teal_900"
                    android:layout_width="52dp"
                    android:layout_height="50dp"
                    android:text="P" />

                <Button
                    android:id="@+id/q"
                    android:backgroundTint="@color/ggg"
                    android:textColor="@color/teal_900"
                    android:layout_width="52dp"
                    android:layout_height="50dp"
                    android:text="Q" />

                <Button
                    android:id="@+id/r"
                    android:backgroundTint="@color/ggg"
                    android:textColor="@color/teal_900"
                    android:layout_width="52dp"
                    android:layout_height="50dp"
                    android:text="R" />

                <Button
                    android:id="@+id/s"
                    android:backgroundTint="@color/ggg"
                    android:textColor="@color/teal_900"
                    android:layout_width="52dp"
                    android:layout_height="50dp"
                    android:text="S" />

                <Button
                    android:id="@+id/t"
                    android:backgroundTint="@color/ggg"
                    android:textColor="@color/teal_900"
                    android:layout_width="52dp"
                    android:layout_height="50dp"
                    android:text="T" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/u"
                    android:backgroundTint="@color/ggg"
                    android:textColor="@color/teal_900"
                    android:layout_width="52dp"
                    android:layout_height="50dp"
                    android:text="U" />

                <Button
                    android:id="@+id/v"
                    android:backgroundTint="@color/ggg"
                    android:textColor="@color/teal_900"
                    android:layout_width="52dp"
                    android:layout_height="50dp"
                    android:text="V" />

                <Button
                    android:id="@+id/w"
                    android:backgroundTint="@color/ggg"
                    android:textColor="@color/teal_900"
                    android:layout_width="52dp"
                    android:layout_height="50dp"
                    android:text="W" />

                <Button
                    android:id="@+id/x"
                    android:backgroundTint="@color/ggg"
                    android:textColor="@color/teal_900"
                    android:layout_width="52dp"
                    android:layout_height="50dp"
                    android:text="X" />

                <Button
                    android:id="@+id/y"
                    android:backgroundTint="@color/ggg"
                    android:textColor="@color/teal_900"
                    android:layout_width="52dp"
                    android:layout_height="50dp"
                    android:text="Y" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/z"
                    android:backgroundTint="@color/ggg"
                    android:textColor="@color/teal_900"
                    android:layout_width="52dp"
                    android:layout_height="50dp"
                    android:text="z" />
            </TableRow>


        </TableLayout>

    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>